Son Nov 30 12:50:45 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLPrologue): set Charset to GNUBG_CHARSET instead
	of hardcoded ISO-8859-1.
	(suggested by Petr Kadlec)

Sun Nov 30 09:56:25 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkbearoff.c, gtkgame.c, gtktheory.c: subst. "iso8859-1" with "*"
	in font names.
	(suggested by Petr Kadlec)

Sun Nov 30 09:10:46 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (HintCube): improve logic for determining whether a move
	has been made: (a) by having moved something in the GUI (old logic)
        (b) by going back in the match and doing a hint on an already
	stored move
	(suggested by Michael Depreli)

Sun Nov 30 08:47:01 2003  Joern Thyssen  <jth@gnubg.org>

	New command "clear hint" to allow CLI users to force
	re-evaluation of "hint" after changing settings.
	(suggested by Achim)

	* gnubg.c (CommandClearHint): new command "clear hint".
	* gnubg.c (InvalidateStoredCube): new function.
	* gnubg.c (HintCube): fix typo

Sat Nov 29 21:22:13 2003  Joern Thyssen  <jth@gnubg.org>

	Implement history

	* gnubg.c (real_main, PromptForExit, ProcessInput): implement
	history
	* gnubg.c (CommandHistory): new command "history".

Sat Nov 29 11:02:50 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubgmodule.c: new python command "nextturn" to
	emulate C routine "NextTurn".
	* gnubgmodule.c (PyGameStats): add a few stats.
	* gnubgmodule.c (PythonCommand): add calls to nextturn.

Sat Nov 29 10:14:33 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (ReportBug): use uname to improve logic.

Thu Nov 27 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
	* htmlimages.c: Fix dice colour
	* gtkboard.c: Remove previous fix...

Wed Nov 26 22:12:37 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c: when opening the bug report page in a browser window
	make gnubg fill in its version, build date and the operating system

Mon Nov 24 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
