@@ -1,3 +1,9 @@
+Sun Nov 30 13:15:48 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* gnubg.c (real_main): honour env. var HISTSIZE.
+	* gnubg.c (CommandHistory): show all entries in history.
+	(suggested by Achim)
+
 Son Nov 30 12:50:45 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* html.c (HTMLPrologue): set Charset to GNUBG_CHARSET instead
